fix: improve editor scrolling and scrollbar styling

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,19 +2,29 @@
 @plugin "@tailwindcss/typography";
 
 
+/* VS Code Scrollbar */
+
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 15px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-track {
-    background: #1e1e1e;
+  background: #1e1e1e;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #424242;
-    border-radius: 6px;
+  background: #424242;
+  border-radius: none;
+  border: 2px solid #1e1e1e;
+  opacity: 50%;
+  transition: all 0.2s ease-in-out;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #5a5a5a;
+  background: #5a5a5a;
+}
+
+::-webkit-scrollbar-corner {
+  background: #1e1e1e;
 }
